# ChangeLog for app-admin/apache-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.165 2013/08/06 12:35:43 ago Exp $

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for s390, wrt bug #476568

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for ia64, wrt bug #476568

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for sparc, wrt bug #476568

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for alpha, wrt bug #476568

  28 Jul 2013; Alexis Ballier <aballier@gentoo.org> apache-tools-2.4.6.ebuild:
  keyword ~amd64-fbsd

  23 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for arm, wrt bug #476568

  22 Jul 2013; Jeroen Roovers <jer@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for HPPA (bug #476568).

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for ppc64, wrt bug #476568

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for ppc, wrt bug #476568

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for x86, wrt bug #476568

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
  Stable for amd64, wrt bug #476568

*apache-tools-2.4.6 (22 Jul 2013)

  22 Jul 2013; Patrick Lauer <patrick@gentoo.org> +apache-tools-2.4.6.ebuild:
  Bump

*apache-tools-2.2.25 (18 Jul 2013)

  18 Jul 2013; Lars Wendler <polynomial-c@gentoo.org>
  +apache-tools-2.2.25.ebuild:
  Security bump (permission granted by bonsaikitten).

  11 Apr 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Removing ghelm from metadata

*apache-tools-2.4.4-r1 (25 Mar 2013)

  25 Mar 2013; Patrick Lauer <patrick@gentoo.org> +apache-tools-2.4.4-r1.ebuild,
  -apache-tools-2.4.4.ebuild: