@@ -8,25 +8,25 @@ DIST httpd-2.2.25.tar.bz2 5524905 SHA256 4bcaf3524796a514b31aa5c64ce80b0cdb484ba
 DIST httpd-2.4.4.tar.bz2 4780289 SHA256 92aabddeca76a4ac7330b143df1407bbf35574c7291c15172238ac598d97655c SHA512 d68789e1e585b4acf26e4e32d063fa512525f8fcc2077b1dbf573dd9f4b47667772d94bb65fefb354fbfae331e87b3fdea422a732838c86d8887eed4b3a76af0 WHIRLPOOL c2ec29a0d52ff1d674f103d0d59c0acd15b194b1102ba5078ef76b62aa959ff92adc5977e095b30c6a778cd9385f9c4ded9bfdc6ce8fba381735ca1aa84aa9f0
 DIST httpd-2.4.6.tar.bz2 4949897 SHA256 dc9f3625ebc08bea55eeb0d16e71fba656f252e6cd0aa244ee7806dc3b022fea SHA512 8ade7ec5291f07a60e279f7a73a79c11c150dbf09c9e7b059e136fcb250130aa0f381b118f84e230184b065d452d5e946df8a5766991be8cdc6e8f5d4c4bac01 WHIRLPOOL 81f036bb438afa30106a402e256d641a2687b619ef7f6ea3e4ab61f30715560e1c9dd3afa3e53c4d99c77de72f100e8a1894a5a898247c381100ceb165b8a146
 EBUILD apache-tools-2.2.24.ebuild 2202 SHA256 de2aa272f672eae732029cda260db4919f1cefff76b96cfbdaf1a764ffafcfa7 SHA512 bbb79157cf3152741e9e9513ba5071bfb2e2bc089ab708dd102bc69172c3480743cd18c7cfefc0ba1f4a886e942ba44a71fca5fd4be7d0561f48b26ba9c64a1c WHIRLPOOL 792750e7f132a2a2e9d485b1453f9240f5b245879ae1dc8eb267184dda0e15de68dfb958eb29b6f4fb1498f3da5199802a58af28783f973d54bfa7e01b756c15
-EBUILD apache-tools-2.2.25.ebuild 2203 SHA256 9961f0b1012a02edac5d847a0751f544511bafd4fcad61ec09f2343437a43300 SHA512 f01ad5416380aaf436c22a701b7ee24223de5783d572e618a773bf251796190a860265646799e00775fa346ce025572c70dfabc78bcc765778030a608f17d81c WHIRLPOOL 9a1e10317de7a1e97e15b4354de6a06365e5032f4a346bafac963acca1c8ac2e6719d7129d5d6a09e37a5f6a0c97ce462ebcf0b080fb731e7014ff229f182e4a
+EBUILD apache-tools-2.2.25.ebuild 2202 SHA256 4c0697926a8c8cd2c31f82bce92ceea30056f1bc3920a9aac3a3b820f2298fcb SHA512 b79139d2ae32a0fd8fb19202db22d29e495d30df36e249398a21afca8cb3e5865d92bdd64ddc3e6457ce85e48016e2ef8a9ece2885fb1a789e6118b9f974444e WHIRLPOOL 7e2de33d4067406b40fd88cee443c7021d85c0a4c548d5e715a52e1b71bbef75029db05614322f4b36a268d5ca04531eeedceb7d07b02d604ab5a8b0385b8c14
 EBUILD apache-tools-2.4.4-r1.ebuild 2136 SHA256 704ca003d8168bbb5063321ea43d9d9e35dd4216a52a5cdcdaa47e3d3870a47f SHA512 71423841ba0839518c635219fffb840452cf53c136b38292c0e940830928a07fe2d91b46fd0b51f8ffafd97e59f141af64fb7c52ea4ef4a01a7008064f204a7e WHIRLPOOL cc31708e27513dd65163685fc800ef833a9a4d3a194d27b566e22a5c959de534104b5abd30573e8c33bdcc4512db1d4088d0d0ac694766ce93ff1e4c58287125
 EBUILD apache-tools-2.4.6.ebuild 2146 SHA256 ce3bb54fec574b88009f31d9030d46b52044cb221387645f130de595a84d6577 SHA512 80ac02bbc7bb16dc93c6ba552e1b9446dea87ebbc019862dc6d0b1889e3f4c52a82d6a1384f3e73610e1925eed5e8479ca923a32bc4a539ef54b02eaf875a09f WHIRLPOOL ec194ad279dcbe2ce6ea7639105ed94c0bd02ad45d222a69abc055a72a8bb94f6d4fd3e25364f16d8133ed6e0c15524ba33101256768bf9f1160a9c6cde75f8f
-MISC ChangeLog 21516 SHA256 3232eebee1076be94560927c93a0b4db9266dbc1620fd0ee67cb325f79eca5e6 SHA512 0703a8c0b1f04378dc1e6c0ec6e7aee8424ba2155f66215cd0a4749d28a38e7f183edb179f04eff850fff8d59ad85c4cfbd934c38d1120561d9499783d9d6009 WHIRLPOOL 2df30785099eb5cbd99019b8484e52ce4e53a22d55106db8ba3768033ba8f356472a4479c9cc07ae20134bc326fd78946a5dde6ee49c8e36b516a488d8bae264
+MISC ChangeLog 21627 SHA256 79a5bd1929d51ba2b77ae98cad394d19233257017ea582e9ce9cdae15c4a3f23 SHA512 114bf5ea81739e38c53eb7259e8f4dee3f7a6c930dc5c4038329c6745822acb3b226f864ba4ba87a51694acc3fb48b9bb138d08d8360a57fed0c4177611e8d2f WHIRLPOOL b0a7bb46b5012113f3fd8b468c36fe1a8fc5532b3cc9b431c93bcb5b65b71df4ebb0102f99a856539b4249ea1ce96f0333c96508aa7aaf28bc02d6464478e677
 MISC metadata.xml 447 SHA256 0c3368f3e86be6edd03475789616c13ed8494d68cccaedcb658a93358df41e47 SHA512 b1f596f76b1a923bf1d52f1f2b5e14b22e0a73412705a9549713e566cb34351bd9845a9d4b1fc35183a4553d9ca0b69092ccd2564c04a99468890b64a0cac6be WHIRLPOOL 3fc1ec31ae1eb2e827e8a7893bf2191d4f9db4e230038204bbecf3af012d82f61e577d8f2788795ebdd23427b00983fdf1e39fbc87fe0d6d007b6dbdf5dda1c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSAOzfAAoJELp701BxlEWfPL4P/RkLApccotSJaefjQ4ajXEbB
-JQojFytO/sO41bKa2Id44U1HP6gsW4gg+/upVdVyKKyvYyJGZhlie7g/W43PJ7i8
-3manOzTTkmugJQfxMQYS4ZHaokEbVXoY/EG2xp8YilW+Jcmq3fGGc82lSvd7NOH1
-GeiwN9s7B+R7xPLQeHrcOFLIb6TNvut6J9tDLuXZ+cb+yA3cEUeefmPW2QSvO7Zu
-K76TRCOg2Pmjb7f6KtfQpIDJhkPLIn/DstHQmZW8h/+xsss6YQESncxrbaKEXPCq
-HT1MQkbqNQ6FddykNL9X9iCusaOtwEl3ll55G4cU/JhmpnUx/wSxT26/w3JiSQXV
-urgkMKBUAjowUUrLwqvHAGrT5xQOs4so+m2pY2gis2tAZNdjzL8xl0POsBqHVxMP
-+hyZ9myHbLVjptq1sH5LlCHZWU8xTMz8qPdWeLF2LjKspSw6c4BJyHrNIr1TMs2Y
-141WnYFZxyi/G1K1AadjqRk5Ttsqd3dwpMGiNxakptaZYXgSJDNIslZNn/r7+UOf
-o8KvEQr50ZIKDvhRzD8NNBg4bA7eyBY184/nBnaXWdvaqe5kGNBEHOfrjJLgCBvQ
-JLXzdxpGqQlUA/g7pbdNgjDscvLzWD2CODwl627N6ZLcML0/V7KKWrDoriCvqpIQ
-FeWatnMiNehSo4psVuTc
-=DilA
+iQIcBAEBCgAGBQJSA5DtAAoJELp701BxlEWfw5gQAKrNhSCElF7DTfc91tw73DkG
+Ln889DJVzuCqfVHfmD14pF0NFgNe3D9y1XA+5fEBOHRqchufTNp92pMlsl+E5DOn
+GNEff5Qof0NWDrtsVzMKNvOHqyp9vJDUoQ61LcffOlvtPoDoYxH1hLk8guP+csm/
+qagS+syzEus3G3NGJtD6rL4Za6MG5+G04scGNTUz94waKSnNMnWgo//W6o/+aV2X
+OXnRRhHfPNTxZ03J6lRvS70p+na2JaztjPllFFGw/w8YB8Lvr0l4ltX0JQ4NdbT7
+wGySg9IQ1sKoNcXWIyK7etAmurG4KmxGMyF+lAtLpIvjAYUeqJmJ7jUF0PCzRfFx
+XkE5L4Pm079s3nx0fuBGO0wNhim/fw62xMTE2LvVC7K8c9LsUIqi2gk6JlTXO/MA
+wms3GLlxYFyp+CMGTxE4eVXR/k+IC9TG2hkE8SidbaJZKtR+DuEdD4rrzQWE8SPN
+RdXmkSsf/ttsWz3cBJE6X4yPwTC4xk74n5gi39ZcyBpqtXYumv3Eijk4eCx/OHtQ
+U0Ngl4dsTMfiYvNx/kN1gFP70heCSjz15XtpXo33LuaygoLaxS6fsFeHegU36utG
+AwxHt7Jsnq5erUHTOsNFD1jfnhK1uvJw90gHt9FFZceyUKpuIR9L3IX5Mskpa2wz
+dDtGegjHUgEFLZK5aRgF
+=ww0W
 -----END PGP SIGNATURE-----
