@@ -10,27 +10,27 @@ DIST gnupg-2.0.19.tar.bz2 4187460 SHA256 efa23a8a925adb51c7d3b708c25b6d000300f5c
 DIST gnupg-2.0.20.tar.bz2 4286191 SHA256 6e949b7f062cab8a3cf0910f91ecf04cabaad458c0aeeec66298651b8b04b79a SHA512 f4eec0ed3503f2aeecfa63af53b844b19ee4be596ea487dce69ec14189c8163652c932d0e657be147b1ca3d7dc8adf9cc1bc8067086fe0c51a3487d56df388c4 WHIRLPOOL a088aab347be7d2c83078eadc79387e705d048868800c8335574f0b0f7c7cd21d8dd620783f83c908075841144b6f8577db8838c99459edd2309fec836761f0d
 EBUILD gnupg-1.4.13-r1.ebuild 3798 SHA256 6883c1614da054e9378dcce892befc85cefc6663f9e015d4002242a261caa3b7 SHA512 a482f8bcaf935a1a041394791fd5244fee2acfe3f6dc14de23b1ba46cb4330ad392aba2fa66bf6d31551aef1b65356bc3ef3cd151b0c497797ad592d2ea51a53 WHIRLPOOL 3eeab2cfcb379daaa7b7e6921ccc84c83f02db9bc5e094ee8cf302988c53fcefb94a57c7bc479df916450afbaa9a940f838daa652413d74309032516a4fadd78
 EBUILD gnupg-1.4.13.ebuild 4239 SHA256 926ecef683acf166bfc7ba9b7b232fb8b19b3e25b9a8cbabb1dd7d5ea7562f4b SHA512 f3c26c737a346bb352df018a9c3fbc645ee40a259ace2cb4d9429124a5d9e77b2d9e45810a7f1f16920b414c2d42b3da5cd88ba1d17e4bf4222d4507d9330dcc WHIRLPOOL 2b3fecbfb80daf95771f3c23dd8d9ea71229da28417bd0b6a6491b91675999aeb0a9bbdf658fa80279b5e343d74c30bbecd8002dbe4d42b39df00691d2dbd6ef
-EBUILD gnupg-1.4.14.ebuild 3763 SHA256 16d566f2c02f1b97132feb76106a63863ac5a87975db1eb4ec6d122777329301 SHA512 60a8e3cab461793ab92f1db3229a40154e36442110e2b5bd6461c8fe1c995767ea8d5b46b2a0a449669687b3590284de136752aee9fb6dff25e7e7da37a5a9de WHIRLPOOL e0bdb00c0368a3b814f7d66f2a39f07b961e6049994e1df56f8ce94fc1b0a0f3f634176131d309418e84a22fb08dfba0ad9822f0ba9f3e72c0e874a88ddec806
+EBUILD gnupg-1.4.14.ebuild 3761 SHA256 4be020e6d1202f937d8b3a59d297bdded0f78a9c1c9e44518080d9fb7bf8605e SHA512 695afc4e15ec18dc29343a2fb551f587ba00f6c8bb1a0122e94556cd5a138cfbc4db5b6a30ebbbf3287f05f580a39ce554d022f1acc467117fc68e9d54531762 WHIRLPOOL ca6f2e8c8d9f1df1f6391e503a48fdb6134cc4da2a851da5d18573a20313909d2357c1cc794f3e92c13d173b2373e059ecd9d091b18b0f01184d15fa1370f105
 EBUILD gnupg-2.0.19-r1.ebuild 4582 SHA256 44cfdd22b5a2697cfc8d91cd4a6dc5ba64dcfaf506b20b0560ccb58ce61f9a78 SHA512 bbe29c08c6ec1fc27d6ed87736eb4ffdc85802a5a4a5f976e7c2a8b953bb68e056dba3e9b16531f465dbd738922aeb48313db39d4f971b46f3d1335b93945574 WHIRLPOOL cda6bf962f7fdbe6af6af618b931d388b9e91cb015471b772ad78a0948e1c822e6ad9efc17af3d6587d28e562dcb1c9b6f9e2c6b140889b6595bbacb67332045
 EBUILD gnupg-2.0.19-r2.ebuild 4683 SHA256 af9e319c56147412b94e33e84dd3c2d3cfca3ddfd01716b5bdbf1d3644b49b91 SHA512 c45bce3095e84c8dcd71626c8d3b9f83c97ffb9d4073101e33a3959551a8d2b97e64bdbe952c877c0b33d67132d625441efdae2ee57b89a2fe62f8e6b7bae40c WHIRLPOOL 7d56104338e404f50f5fd8161febf2b9ed5638e5256e4d1567921c4982675ab472f09520e9ef92d90d9b3bdebd21e352b32cc43d0aa9d61b73772946ca169b5e
 EBUILD gnupg-2.0.19.ebuild 4472 SHA256 5a5159050703c2cc0831b6b6a7a42e6d1d9a92b3443e5039290fed2b7cfbc5b6 SHA512 48310f5582cf4a95cd20828a7e313bf7bca79e4edbef44ec4f95d048f1f9d7c932f469dc239827f38a3fd6a4b0c5c7624d3f338d8735525a877d623aeb5b0105 WHIRLPOOL 59a01c348c91268690cbc28706d635f511fef2faa2158446a915736652421abb123bf45c9598412b21c8d7b11b5635b55301ec5f44fedce0476eaab7d7e7fd8c
 EBUILD gnupg-2.0.20.ebuild 4574 SHA256 184e6a23b57a5c86300f5bd76b0eeed3b568a5bc9a06ae43210e1afce4c59fa7 SHA512 2e9682726ba32d27bb99060302960e3e8855718eb7a7a979c13dae2d3fb88216369ba3af690cff013110577359d830732159d2048dd9a9782828f63a3b1cdf3f WHIRLPOOL f2a9a3d767259073f3b6ddf8c97f053de9d3f57a09e6642f014ea4d0eae52bb7730fe1a4eb3dafaf0be627aa8008532859bf0d50853ff9ea520eb77b1a798bbc
-MISC ChangeLog 71597 SHA256 156353eb5c155338f12b0a68f59174b45266dd7c3be52c938aca43426944f867 SHA512 6a216d9542a4ebd4a75e267964eb7da1b8dbd61489719f0e4c757fc75b5a025ee2f22847668557747528e77de9f20d9b1681daea77b1d080e276d7830cb95efd WHIRLPOOL 922148554844c396c94bbe4cf8b88180a4a60a307e695c75cbd38aa4fe6d648b54d30c278bbf868a8749310200dccda79b5d1f2907718ccd9dca59f55077b7df
+MISC ChangeLog 71808 SHA256 c167098dd773ecce241744e1aa7c5d2b93b92d8d196394ccf3a825d2c47af812 SHA512 6ede00ba95364574d75b677b64620f67c296675ff3aeb81d65099d7611e902635c85f03349c460b4d34b23c196d2ca327fd8ac621d6830732bbacf21b04ba3f0 WHIRLPOOL f7c9dc8d234a72edc5c3bd4c04ec18f4a70116e6a333409808519c002ab2a06d44e535a05bb14363e055e874eb367e7e118f184092680b42b0dc255e2fbd3e5e
 MISC metadata.xml 1078 SHA256 6d0df2861d7b3fc7777f9c703b06f789a8e4e4d08a98b1f5f5cc661943a5b7e0 SHA512 2998315ea1dad11806385d84827189efb626620d6596bf51a67180567a5ed3cbcb5eea50de907477b93d876ce66fb7e944cce159fe29450a301cda9bdd76db87 WHIRLPOOL fc0761ee1950b067a4434192c22b3d516017b539694e3615f9429ad8b05ace449e8d9abf01086baf91eb93cb9ad4fe2c37467b0313ccaf0411a99be63a7440e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSAOw5AAoJELp701BxlEWfQCUQAJf9rWwSQ7kJeOjhP0KTD119
-dwqWOEd7fOlsWmSD8QyLQxzhvgmmMllR2/0ewvMLZ7LU5OD4KgUacSSVjqz92IMv
-Dtm8WaGZhvBhs4ommi1k24PAsIdC7Jd01lSP2Kgl9N5haNbNKIgn6cUShj4Rk4CT
-Nd/YQsj0uyOaiqsZJhPnKZNd68ppbOiefwWOElka4LuQVRzclrKbQnOE67lvagA3
-Yk25BWOvLfY42RuCcHHbCRlNtgY3UTUpzDDHC7VAEunP1N7Z38o3YHl4UqjqqfiX
-EK9kkX/37DCJvIFOIaH8WbJh3wMzQnxOfOgODa/tMB6c5DAtSQc0FHzYH7XOm59o
-5YtQys87WU3V+GebiTvQMLG8PvC/fKcrhpHnyd8oOSr7wsJz1SwZxRclpNEviC+1
-kzcXkdnhQkUPogMRMyiMbdAgTma1g+OSkwIOj6LoDXU70XKmQgrSWdugSTb8eJHi
-zqb/Dj+7l3uuvvf0BE+jZbnDSQqEpK9ipfqRxykMSD7uy15GU8YTY/zy0Miz0e/5
-fPtlhakhNl2zOHbMVRAv3kvpc0QLLyGCxxrNCGW4/upMdN5rgVCPasJBW8I30cse
-yEUIbG2OzcggGMvSlCU287XgDrNg/rSBr77tYH5XWJE36uDVkcw6rSV5sSVL9EKd
-zbeLM2J5QCO5puzzniIO
-=keQz
+iQIcBAEBCgAGBQJSA5D3AAoJELp701BxlEWfTncP/3rIdsAhMwhvEENc2b5+cCAP
+ptjr24mNFONQxMZNpdhPMLHg4TEtzjQ1UU0w6kKhYJmdZzrQN3Fq8V8GANX7TsSB
+VnLAV73l8C32jsRK08OhZmgj1dF2GR/RO6FIjo+GUvLmL5+2uHYWViVMMsHVt//d
+htp2lrn6lA3vMGs31Ppszt8PHwtdkYwNTOU0XrwPzLy7VK2IkIB0UBXvpd8RbRkA
+m/T9oP6HTTBH998JzUrBev1z3aSbUiGVKjh5tEz+tgU3MUMbIXBIP0mdl0KDkN3c
+XVDujmy/AcpWqazr5JOCGPohmW8Psy8xIjG0ox4DlNH/BHLTTpPUCfhY1n517YBT
+2++awLNl90cPrwho62bbfha63CfNzsVtoU9owTtxDWlp9hUAABz+A19L1M0NC0xv
+CcUHsui4q7uGf6+xB6S93Ni+5xkkdPzscbd+XlXwsQDDB+sCJI7CEWt/T+q4i05r
+hME9KzyKJVU3AyOFoPy4vKv/oiHAv974Ajf/OdILteMoh+FAZGoQ+2IlSo5YRY5o
+wn05wjzSIvqR+7DhwhQhsi2wmU+6FHoL/2EBaHaxpYyOTQ6WeSWxaLXwsvjQhfO+
+Bc1imI2h9xYXpcYwN0FvNpHzR8s3gN1ETafN6EWjZRgT+xglG0cNJlwutRycvg8V
+Z1WUzncW3CFX/gWnseoj
+=cw+7
 -----END PGP SIGNATURE-----
