@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX 4.0.3-perl-module.patch 922 SHA256 db0d7182c6b3ae04e3a13995a29a2b3f676cab57169bb15a8b9aaa74225963e2 SHA512 91aed113ca26c324b043e53fe27d73adcf2dcd6d81af959fc912c0c452dea25905ad7b8ec4673ed72c0d48467a24375034d4201a8933468bd891a417f0145560 WHIRLPOOL 95666a9100e132b7325a21208b7b90774632f8a696c0351859a730daaf1cdbd29c7b2b57c2d12ce7b8f48842bedb54deb5fcc2e7da248bfde7513a8a91a8ff4e
 AUX 4.0.3-respect-ldflag.patch 719 SHA256 007dfd177d93e7e936493096fae70c17cd55dc23199eab2fbf67e2a71a900c95 SHA512 14c5012ea38b4f1aabf829f8e3d465ffb3f087cf78f632f91368012950d5a00ceaec2485a7ff5de3e718c84d75f8afe27476f691d3c1689243571bb8e1ec7f21 WHIRLPOOL 1b691acc7e4d9ccdfd83d994939fcc4d5be7eeba11f65edbf823c126dad3d587121f2ec2336834c5a4534c57d762d257c2a4517d52a396ade23880b362b5d7a6
 AUX 4.0.7-perl-module.patch 392 SHA256 a26eca155b6fb1638645954d8329f47c8da201e603b20b38738091cae8b24aeb SHA512 7f26ac25325dffa706bef97915be06707c4953ee7c436a86a79d4edf764bbe4db9e6eeb37b889f6f4214b9b8d5ceb31091398c5ccce7607be941a74b3fe4ebf7 WHIRLPOOL 2cecd99c59358ea87e8775cf8e585e01fffe44a36ccf675bdac58a2cd72d837d961f592b03fb5d7bbf0a5d7a90faa8c42e1f9514c2ddc64a5576ffc5d0630fbb
@@ -5,10 +8,27 @@ AUX 4.0.7-respect-ldflag.patch 719 SHA256 273fe46b4fe613021e43c0796b66014e53cf92
 AUX perl-module-3.0.1.diff 1037 SHA256 97385f93bf353c50b77844e71397f2b01f7ae999b2a467a7a298a31b5b699c95 SHA512 ac9c107d804ee098ab31e7a39b6d96e4c43d104e673747e5134e736ea08fee05d923304aec1c9638128844b38dd4cbbcfaea47d5eafa89b3eb201145577b62f9 WHIRLPOOL e6a62a233cbb4f2bb37a911036ffaf497c4e196361f1e17ab9f0d58dda629ca53d7fb99aef1a3e2d9b2df27ebf0a4c96312d3041ffa80a875a881998b9667c64
 AUX perl-module-3.0.20070508.diff 1051 SHA256 72555e1174f730929b013e8fac18b0f28cf2401a3e69f2431e62588952257f19 SHA512 f7593e411e439a36256210ba4bd1197ecc0e3da2e7e921ce204d00f41f32f45e975062f0c3a2d68a6f28df3f686329d8eb85971fbf29634d60a185bf52e21667 WHIRLPOOL 43601af4d6855b6abc75d3330131738abce2fc6c0df9832f36c9f65e618bb003fc8a5826cec7ecd1f26557b0ba23559a130bd7e2fd06024837eeb18e548ec290
 DIST foomatic-db-engine-4.0.7.tar.gz 354069 SHA256 fc0712f23d9d70fa02295ac5ac3aad0f8e2b7bd15020d44b83c40f295ab6fe9c
-DIST foomatic-db-engine-4.0.8.tar.gz 354578 SHA256 f0c4892ae5566ea2efaae8bd58352fd32001d112f2f9dfff63f7de03b46733e1
+DIST foomatic-db-engine-4.0.8.tar.gz 354578 SHA256 f0c4892ae5566ea2efaae8bd58352fd32001d112f2f9dfff63f7de03b46733e1 SHA512 8330f6a061c9a083d03668001aa966d6c280ef0479d1b9c01d3d7c9210edf12bc9101408193e598738cdc0431dbf6e286b4cf3cc21c2f7a535335dbcbfceea1a WHIRLPOOL f3ac0635a07c702d70e6c53e562e218b4b0314c239e35fd47a5a17b06fba206c3bddda56a90d4c3be5670c226fb077ac1755211281501154d1cebd4497c7a9f5
 DIST foomatic-db-engine-4.0.9.tar.gz 360242 SHA256 7c9ef1c8e934de1b0e37104570d6b1ff8ea349f3ed6d965397b7c94449122f44 SHA512 37e192ba5eccedf653684781c503ca0a2eed5f111799ff07a3dd419dd3049f2ae9a7ee21e921a79732cc178ae52c69f25ffac2f5761665871fec520d7b64f2e8 WHIRLPOOL ea9869ae07040e23022fb06746953300d15390101b8fd6d7af7768f656d0082180abae3847d841d54309e898fd0282e81d00f0946cfeafe423741fd5648ade11
 EBUILD foomatic-db-engine-4.0.7.ebuild 1228 SHA256 661f82a16717e6291a385a5260800b6a78710c28c51d53349f52f101a6bcc40b SHA512 f0a1bf0aef202c3c077b75f11cf64c6e4e46ada57973881ab9660978d56168a31b1c4a3749f4effd106ed7724aa1173c2333d010c04e9b4de5e2786792e2f21c WHIRLPOOL 94c91d501614dc8bf2e6b6aa3dcea58cea333e25d25adc68d685e33d364c4df292951ef3c24e62fd66f2100bd05e9f3e2ff07a41225791e3a3719d5e1abd5b9f
-EBUILD foomatic-db-engine-4.0.8.ebuild 1236 SHA256 d906c520b9f79cf658d4573cdce7b3d7f98dd15b4a03787d29a2a4e81e6f6895 SHA512 ca9391c6bd8877a0d221cc1dbd9b1d6a989ea9e091d8733af4f9b05be6e0fd4b9230af81c7a3dcffd912af47f023331d6564ebe90d5a842ba87baf2753266f74 WHIRLPOOL 41abba4ad3f9c894ef11c26eaa9ea9d66829a02cf5d3e4420cfd13eacc0ee74dd93235523d5da360299293bd8dfa613187f33ee1fb45b5b865f1469f78a9579d
+EBUILD foomatic-db-engine-4.0.8.ebuild 1234 SHA256 e48575c81de360e3c97aeaa8e6d1064dbdf1555503b76248163d8b9a937a42b3 SHA512 701b27b85b3c0d5059c89c2dbb1e11d6c60cc779e6ea993972632a2d7e93afcd3947c1585b17102e11c9542096b5dc2621fe2988aaa50629b43ae3690b78ebc1 WHIRLPOOL 555f692cf863a9c358c505b393af49384d47290e7c64e10cb197dd3130420f729adbcb0f4c685b8407274552399b2d768812e0e465598405330464b375ab7939
 EBUILD foomatic-db-engine-4.0.9.ebuild 1211 SHA256 8191dfb59f428ed7e7f693c7a8b8b22ad9a73989c2122104652f863cb6cfbbcc SHA512 fe45dd227e2aac97988ca6f6274e685d6290981df60ac4fa80b57260afa946cfc07c8ec0837bdca01200a36df965eefb8ba2cc3384056f8422331d22f74c90ee WHIRLPOOL 0d8d15dbb454d3e58563a48832ab8e8f2cc09c0d6465950afe9d565aa9b37ed5f4c5be9821bafea732783b8ab96be6e8e0336970af9494b4870d971ad7f21f70
-MISC ChangeLog 8480 SHA256 723cff987dd79c2f23d2f477723516a62a54285590ec69e4ace9e5fa40e69fab SHA512 17744d69026207af7adb9e0733364caca1cf9cad93ca6a65dcc926085bef5955ebb5d3a308dd77d5d114065dce81a5db10bcad72d3b0d3fd24acb1ac637a2dca WHIRLPOOL f32e10389ed601b3e2545e07ae593ce4c6ac9fe33610cefe79a54538dcc9640a5d20b838cc60e01f1d62bb6347fd374b3e7c3a4142844c933fbee7502d433620
+MISC ChangeLog 8599 SHA256 90f6b16bdc855a959e83656a47de1802a64733f6c611cd1e27134749ef543959 SHA512 8db38d4c21d51b741672b1c1b5d115186799ea9ec9761613b70f197521f467e6009a8293c1f3ead2c518f81711a8b8d4cec79a1dc508864282c2023f80e9e46c WHIRLPOOL 9d0fc9d87c4a4bbfacc9b7dcdb9d4799c1b920ff06be1700058b69c46aff55a8c85ca5c42135dcf056eb2b24b5bc652dd624b55ed098b1b9ec585851c5b6af17
 MISC metadata.xml 162 SHA256 753dd90680a9d937cb438cbf14dc217d518514d1596682a4e3478b1b7c7ba051 SHA512 ff7cd6e9d088c1ce0107a86a693abddb12d1385e8f9abb2614aa5cb8ed0c046a1387ccab1643fe711e84df1fa23659ce490f68f0504bbb908b7662a0ac490a03 WHIRLPOOL ccbf59144f058b49de3d54bbe6d92e2d2e8b605df10d5143ccfd7e4a021069ca025e87b4179179a60091c03d8bf1e371207c35f1102c2c1f848bf6697e9c2bb2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCgAGBQJSAmCrAAoJELp701BxlEWfdvcP/2CrhY2gAA1a5J0BYnYTIjRK
+lneu19r4PqM/qiL7fiM9WiL9BeEJXCdAFuVDsPWf62W7M2Ca+NC0BweWLFiSke4h
+CIu0q5dYzUn6sxWUlxEA2M+8OJBC/nlDfWEYPYWG9/gtw7RKjCoFd4vMjU+5hh3U
+WVVD6hrq63iwG2NqhTfptdS5j/d7TwlCK3HorNKkmcztFerz3muEBJw1J092PdBg
+y6ASivpklDNJnl8K95jVhTL4p/3UgppE7zU/9gnmiGJIWMjMD08iB5bvFTEKLO0R
+dkaT38RMhv0VDii4KlNebHsDyR0WoLRRLh0CNx/VlIFGHxFu3rfsS6qPzh4A8UQp
+Nk/2NJnvcp3uzF6ahtIUF4cMrpAh3tQrh941aVOktSrQ6BDbQElPO3fcdSdk0LDY
+styqEbYCzcF1qTRu0ANooljUChCIy7njbwrHn0oFcunm65Qpo10nKnBLv/2U/YSj
+fKJT3d1OVjzvpYbbFJzN/BOgSU1wuo4TYeSHqotzirA5Uik1C7O4KXFib3nh8V0l
+DPiYplRoxypNX28pxMpIFPRTMVCeeRCw0ak+MPjxtdzyprYGLLcBi4NDO6U5kdT6
+MqpK4jVCSmT05iKyXcLdHXE9Lo77jcQPz4fjP5ZGFTi6NLr9iV+RXjkvfY9NKdlq
+r/pPPXbeEiJqtBHJqIMA
+=Draq
+-----END PGP SIGNATURE-----
