@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/apache-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.165 2013/08/06 12:35:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/apache-tools/ChangeLog,v 1.166 2013/08/08 12:37:03 ago Exp $
+
+  08 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
+  Stable for sh, wrt bug #476568
 
   06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> apache-tools-2.2.25.ebuild:
   Stable for s390, wrt bug #476568
